# Data-Gathering-App-MVP

./: .gitignore  Module_7_Project.ipynb  README.md  module_1_mini_project.ipynb  module_7_project.ipynb  pyproject.toml  requirements.txt
config/: settings.py
